# bubblecov

./: Cargo.toml  README.md
input/: A-3105.fa.gz.pggb-s3000-p70-n10-a70-K11-k8-w10000-j5000-W0-e100.smooth.gfa  B-3106.fa.gz.pggb-s1000-p70-n10-a70-K13-k8-w10000-j5000-W0-e100.smooth.gfa
src/: main.rs
