[package]
name = "handlegraph-cli"
version = "0.1.0"
authors = ["Erik Garrison <erik.garrison@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#handlegraph = "0.3.0"
#gfa = "0.6.2"
petgraph = "0.5.0"
clap = "2.33.1"
chrono = "0.4"
handlegraph = "0.2.0"
gfa = "0.2.3"
json = "0.12.4"
priority-queue = "1.0.0"
log = "0.4.11"
bstr = "0.2"
